@@ -1,0 +1,13 @@
+#! /usr/bin/env python
+import sys
+import requests
+
+url = sys.argv[1]
+
+payload = { 'key' : 'value' }
+r = requests.post(url, data=payload)
+
+print r.status_code
+print r.text
+
+
