@@ -1,0 +1,8 @@
+{% extends "base.html" %}
+
+{% block content %}
+
+<h1>404</h1>
+This page does not exist
+
+{% endblock %}
