@@ -1,0 +1,6 @@
+<html>
+<body>
+{% block content %}
+{% endblock %}
+</body>
+</html>
