@@ -1,0 +1,8 @@
+{% extends "base.html" %}
+
+{% block content %}
+
+<h1>Content Page</h1>
+Stuff about things
+
+{% endblock  %}
