@@ -1,0 +1,8 @@
+{% extends "base.html" %}
+
+{% block content %}
+
+<h1>File Page</h1>
+Files
+
+{% endblock  %}
