@@ -1,0 +1,8 @@
+{% extends "base.html" %}
+
+{% block content %}
+
+<h1>Image Page</h1>
+Images
+
+{% endblock  %}
