@@ -1,0 +1,11 @@
+{% extends "base.html" %}
+
+{% block content %}
+
+<h1>Hello, world.</h1>
+This is aliomar's Web server.<br>
+<a href='/content'>Content</a><br>
+<a href='/file'>Files</a><br>
+<a href='/image'>Images</a>
+
+{% endblock  %}
