@@ -1,0 +1,7 @@
+{% extends "base.html" %}
+
+{% block content %}
+
+Hello Mr. {{ firstname }} {{ lastname }}.
+
+{% endblock %}
